--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "",
   "version": "0.1.0",
   "dependencies": {
+    "apollo-datasource-rest": "^0.9.0",
     "apollo-server-lambda": "^2.13.0",
     "graphql": "^15.0.0"
   },
